# sphinx-book-theme

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
.github/workflows/: publish.yml  tests.yml
src/sphinx_book_theme/: __init__.py
src/sphinx_book_theme/assets/styles/abstracts/: _mixins.scss  _variables.scss
src/sphinx_book_theme/assets/styles/base/: _base.scss
src/sphinx_book_theme/assets/styles/components/: _search.scss
src/sphinx_book_theme/assets/styles/content/: _admonitions.scss  _margin.scss
src/sphinx_book_theme/assets/styles/sections/: _article-container.scss  _article.scss  _header-article.scss  _sidebar-primary.scss
src/sphinx_book_theme/header_buttons/: launch.py
src/sphinx_book_theme/theme/sphinx_book_theme/: theme.conf
src/sphinx_book_theme/theme/sphinx_book_theme/components/: article-header-languages.html  article-header-versions.html  language-switcher.html  page-toc.html  versions-switcher.html
src/sphinx_book_theme/theme/sphinx_book_theme/sections/: footer-content.html
