[build-system]
requires = ["sphinx-theme-builder >= 0.2.0a7"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "16.13.2"
theme-name = "sphinx_book_theme"
additional-compiled-static-assets = [
  "locales/"
]

[project]
name = "sphinx-book-theme"
description = "A clean book theme for scientific explanations and documentation with Sphinx"
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
  "sphinx>=6.1",
  "pydata-sphinx-theme>=0.16.0"
]

license = { file = "LICENSE" }
maintainers = [
  { name = "Jan Genoe", email = "jangenoe@gmail.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[project.entry-points]
"sphinx.html_themes" = { sphinx_book_theme = "sphinx_book_theme" }

[project.urls]
Repository = "https://github.com/jangenoe/sphinx-book-theme"
Documentation = "https://sphinx-book-theme.readthedocs.io/"
