[build-system]
requires = ["sphinx-theme-builder >= 0.2.0a7"]
build-backend = "sphinx_theme_builder"

[tool.sphinx-theme-builder]
node-version = "20.9.0"
theme-name = "sphinx_book_theme"
additional-compiled-static-assets = [
  "locales/"
]

filterwarnings = [
  "error",
  'ignore:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning',
  'ignore:The frontend\.OptionParser class will be replaced:DeprecationWarning',
  'ignore:The frontend\.Option class will be removed:DeprecationWarning',
  'ignore:nodes\.Node\.traverse\(\) is obsoleted by Node\.findall\(\):PendingDeprecationWarning',
  # jupyter-client throws this
  'ignore:datetime\.datetime\.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
  'ignore:datetime\.datetime\.utcnow\(\) is deprecated:DeprecationWarning',
  # Sphinx triggers this
  '''ignore:'imghdr' is deprecated and slated for removal in Python 3\.13:DeprecationWarning''',
  '''ignore:'sphinx.util.import_object' is deprecated.:PendingDeprecationWarning''',
  'ignore:Parsing dates involving a day of month without a year specified is ambiguious:DeprecationWarning',
  'ignore:Argument "parser_name" will be removed in Docutils 2.0.:PendingDeprecationWarning',
]


[project]
name = "sphinx-book-theme"
description = "A clean book theme for scientific explanations and documentation with Sphinx"
dynamic = ["version"]
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
  "sphinx>=7.4.7",
  "pydata-sphinx-theme==0.16.1"
]

license = { file = "LICENSE" }
maintainers = [{ name = "Jan Genoe", email = "jangenoe@gmail.com" },]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]

[project.entry-points]
"sphinx.html_themes" = { sphinx_book_theme = "sphinx_book_theme" }

[project.urls]
Repository = "https://github.com/jangenoe/sphinx-book-theme"
Documentation = "https://sphinx-book-theme.readthedocs.io/"
